PCX: Fix reading of the extended palette

The VGA palette starts 769 bytes before the end of the file. There may be PADs between the end of the image and the start of the palette.

BUG: 463951
(cherry picked from commit 14742cb502272b8029103ce10148dfe5d0317e80)